Trying to fix the sidebar spacing

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -13,10 +13,6 @@
   @include clearfix();
   margin-bottom: 1em;
 
-  @media screen and (min-width: 1024px) {
-    padding-top: $masthead-height;
-  }
-
   @include breakpoint($large) {
     @include span(2 of 12);
     opacity: 1;
